thirteenth attempt at fixing the viewport issue with the background on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,14 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow: hidden;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+}
+
 html {
   font-size: clamp(16px, 1.5vw, 32px);
 }
@@ -27,6 +35,9 @@ body {
   font-family: "Manrope", sans-serif;
   height: 100%;
   width: 100%;
+  position: relative;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 header {
